<resources>
    <string name="app_name" translatable="false">SberRunner</string>

    <string name="new_to_sberrunner">New to SberRunner? Sign up here.</string>
    <string name="part_to_click_login">Sign up</string>

    <string name="already_have_an_account">Already have an account? Sign in here.</string>
    <string name="part_to_click_registration">Sign in</string>

    <string name="dialog_rationale_title">Location request</string>
    <string name="dialog_rationale_message">Running activity requires your location and background location in order to locate your geoposition during runs</string>
    <string name="dialog_rationale_give_access">Give permission</string>
    <string name="dialog_rationale_decline">Not now</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="weight_kg">Weight (kg)</string>

    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>

    <string name="create_new_account">Create new account!</string>
    <string name="enter_with_your_account">Enter with your account!</string>

    <string name="forgot_password">Forgot password?</string>

    <string name="show_current_location">Show current location</string>

    <string name="zero">0</string>
    <string name="zero_dot">0.0</string>

    <string name="duration_zero">00:00:00</string>

    <string name="total_distance">Total distance</string>
    <string name="avg_distance">Avg. Distance</string>
    <string name="distance">Distance</string>

    <string name="total_runs">Total runs</string>

    <string name="avg_speed">Avg. Speed</string>

    <string name="avg_duration">Avg. Duration</string>
    <string name="duration">Duration</string>

    <string name="avg_calories">Avg. Calories</string>
    <string name="calories">Calories</string>

    <string name="theme_default_entries">Follow system theme</string>
    <string name="theme_light_entries">Light</string>
    <string name="theme_dark_entries">Dark</string>

    <string name="theme_default_entry_value">0</string>
    <string name="theme_light_entry_value">16</string>
    <string name="theme_dark_entry_value">32</string>

    <string name="unit_metric_entries">Metric (km)</string>
    <string name="unit_imperial_entries">Imperial (mile)</string>

    <string name="unit_metric_entry_value" translatable="false">metric_unit</string>
    <string name="unit_imperial_entry_value" translatable="false">imperial_unit</string>

    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="finish">Finish</string>
    <string name="resume">Resume</string>

    <string name="check_email_toast">Check your email for a password reset</string>
    <string name="failed_check_email_toast">Can\'t find this account, check email or connection</string>
    <string name="not_matching_email_password">Email/password not matching, check fields or connection</string>

    <!--Settings-->
    <string name="settings_title_name">Change name</string>
    <string name="settings_name">Tap to change displayed name</string>

    <string name="settings_title_weight">Adjust weight</string>
    <string name="settings_weight">Tap to adjust your weight</string>

    <string name="settings_title_units">Units</string>
    <string name="settings_units">Tap to switch to metric/imperial units</string>

    <string name="settings_title_theme">Theme</string>
    <string name="settings_theme">Change displayed theme</string>

    <string name="settings_title_voice">Voice assistant</string>
    <string name="settings_voice">Play notifications during runs</string>

    <string name="settings_version">Version</string>
    <string name="settings_title_log_out">Log out</string>
    <string name="settings_title_delete_account">Delete account</string>

    <string name="settings_privacy">Privacy Policy</string>

    <string name="settings_category_account">Account</string>
    <string name="settings_category_settings">Settings</string>
    <string name="settings_category_about">About</string>

    <string name="cant_find_location">Can\'t find your location, check connection and try again</string>

    <string name="title_welcome_one">Welcome to SberRunner</string>
    <string name="welcome_one">Simple app to keep track of your runs</string>

    <string name="title_welcome_two">Simple but powerful</string>
    <string name="welcome_two">Analise your past runs and keep improving</string>

    <string name="title_welcome_three">Let\'s start!</string>
    <string name="welcome_three">Add your existing account or create a new one</string>

    <string name="enter_with_account">ENTER WITH ACCOUNT</string>

    <string name="home_page">Home</string>
    <string name="map_page">Map</string>
    <string name="run">Run</string>
    <string name="progress_page">Progress</string>
    <string name="settings_page">Settings</string>

    <string name="permission_rationale">SberRunner needs your location and a background location permissions to track your run. This will insure that SberRunner will track your run while app is in background.</string>
    <string name="permission_rationale_q">To have a full background location access on your Android version to track your run in a background, you must set the *Allow all the time* option. This will insure that SberRunner will track your run while app is in background.</string>

    <string name="run_initial_duration">00:00:00</string>
    <string name="run_initial_distance">0.00</string>
    <string name="run_initial_calories">0</string>

    <string name="map_preview">Map Preview</string>

    <string name="date">Date</string>
    <string name="undo">Undo</string>

    <string name="run_deleted">Successfully deleted run</string>
    <string name="not_enough_data">Run will not be saved</string>
    <string name="service_channel" translatable="false">SberRunner Service Channel</string>
    <string name="time_filler" translatable="false">9:02am</string>
    <string name="date_filler" translatable="false">July 05, 2021</string>
    <string name="back_button">Back button</string>
    <string name="kilometers">Kilometers</string>
    <string name="miles">Miles</string>
    <string name="kcal">Kcal</string>
    <string name="km_h">Km/h</string>
    <string name="mph">Mph</string>
    <string name="time">Time</string>

    <string name="no_history_runs_home">You don\'t have any runs history yet</string>
    <string name="no_history_runs_progress">Here will be your progress stats</string>
    <string name="cancel">Cancel</string>

    <string name="not_enough_data_msg">There is not enough information to save this run, you sure you want to finish it?</string>

    <string name="km_addition">\u0020Km</string>
    <string name="miles_addition">\u0020Miles</string>
    <string name="km_h_addition">\u0020Km/h</string>
    <string name="mph_addition">\u0020Mph</string>
    <string name="kcal_addition">\u0020Kcal</string>


    <string name="run_saved">Run saved</string>
    <string name="allowed_digits" translatable="false">0123456789</string>
    <string name="total_duration">Total duration</string>
    <string name="total_calories">Total calories</string>
    <string name="running_app">Running App</string>
    <string name="default_time">00:00:00</string>
    <string name="log_out_from_account">Log out from account?</string>
    <string name="exit">Exit</string>
    <string name="delete_account">Delete account?</string>
    <string name="data_will_be_lost">All you data and progress will be lost, you sure?</string>
    <string name="delete">Delete</string>

    <string name="name_cant_be_empty">Name can not be empty</string>
    <string name="email_cant_be_empty">Email can not be empty</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="password_cant_be_empty">Password can not be empty</string>
    <string name="password_six_characters">Password should be at least 6 characters</string>
    <string name="weight_not_valid">Weight is not valid</string>
    <string name="current_location">Current location</string>
    <string name="no_access_to_internet">No access to internet</string>

</resources>