<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_tiny"
    android:backgroundTint="@color/main_green"
    android:elevation="@dimen/elevation"
    app:cardCornerRadius="@dimen/corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/map_item_image_view"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/map_preview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/distance_item_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:paddingStart="@dimen/padding_medium"
            android:text="@string/distance"
            android:textColor="@color/background_color"
            app:layout_constraintBottom_toTopOf="@+id/duration_item_tv"
            app:layout_constraintStart_toEndOf="@+id/map_item_image_view"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/duration_item_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:paddingStart="@dimen/padding_medium"
            android:text="@string/duration"
            android:textColor="@color/background_color"
            app:layout_constraintBottom_toTopOf="@+id/avg_speed_item_tv"
            app:layout_constraintStart_toEndOf="@+id/map_item_image_view"
            app:layout_constraintTop_toBottomOf="@+id/distance_item_tv"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/avg_speed_item_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:paddingStart="@dimen/padding_medium"
            android:text="@string/avg_speed"
            android:textColor="@color/background_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/map_item_image_view"
            app:layout_constraintTop_toBottomOf="@+id/duration_item_tv"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/date_item_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            android:fontFamily="@font/poppins"
            android:text="@string/date"
            android:textColor="@color/background_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>