<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_green"
        android:elevation="@dimen/elevation"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        app:layout_constraintBottom_toTopOf="@id/map_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/duration_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/run_initial_distane"
            android:textColor="@color/background_color"
            android:textSize="48sp"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pace_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/run_initial_pace"
            android:textColor="@color/background_color"
            android:textSize="24sp"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/distance_tv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duration_info" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/distance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/run_initial_distance"
            android:textColor="@color/background_color"
            android:textSize="24sp"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/duration_info"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/duration_info"
            app:layout_constraintTop_toBottomOf="@+id/duration_info" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/calories_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/run_initial_calories"
            android:textColor="@color/background_color"
            android:textSize="24sp"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/distance_tv"
            app:layout_constraintTop_toBottomOf="@+id/duration_info" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/duration_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/duration"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duration_tv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pace_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/avg_pace"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="@+id/pace_tv"
            app:layout_constraintStart_toStartOf="@+id/pace_tv"
            app:layout_constraintTop_toBottomOf="@+id/pace_tv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/distance_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/distance"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="@+id/distance_tv"
            app:layout_constraintStart_toStartOf="@+id/distance_tv"
            app:layout_constraintTop_toBottomOf="@+id/distance_tv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/calories_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/calories"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="@+id/calories_tv"
            app:layout_constraintStart_toStartOf="@+id/calories_tv"
            app:layout_constraintTop_toBottomOf="@+id/calories_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_layout" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:backgroundTint="@color/red"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:text="@string/finish"
        android:textColor="@color/background_color"
        android:visibility="invisible"
        app:icon="@drawable/ic_fab_stop"
        app:iconTint="@color/background_color"
        app:layout_constraintBottom_toTopOf="@+id/fab_start"
        app:layout_constraintEnd_toEndOf="@+id/fab_start"
        app:layout_constraintStart_toStartOf="@+id/fab_start" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_fab_end"
        android:layout_marginBottom="@dimen/margin_fab_bottom"
        android:backgroundTint="@color/main_green"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="@color/background_color"
        app:icon="@drawable/ic_fab_start"
        app:iconTint="@color/background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_fab_end"
        android:layout_marginBottom="@dimen/margin_fab_bottom"
        android:backgroundTint="@color/yellow"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:visibility="invisible"
        android:text="@string/pause"
        android:textColor="@color/background_color"
        app:icon="@drawable/ic_fab_pause"
        app:iconTint="@color/background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>